src/styles/global.css
@import "@fontsource-variable/inter";
@import "tailwindcss";
@plugin "@tailwindcss/typography";
@plugin "@tailwindcss/forms";
@plugin "tailwind-scrollbar-hide";
@theme {
  /* Typography */
  --font-sans: "Inter", sans-serif;
  /* Colors */
  /* Base */
  --color-base-50: oklch(0.985 0 0);
  --color-base-100: oklch(0.97 0 0);
  --color-base-200: oklch(0.922 0 0);
  --color-base-300: oklch(0.87 0 0);
  --color-base-400: oklch(0.708 0 0);
  --color-base-500: oklch(0.556 0 0);
  --color-base-600: oklch(0.439 0 0);
  --color-base-700: oklch(0.371 0 0);
  --color-base-800: oklch(0.269 0 0);
  --color-base-900: oklch(0.205 0 0);
  --color-base-950: oklch(0.145 0 0);
  /* Keyframes */
  --animate-marquee: marquee 92s linear infinite;
  --animate-rightMarquee: rightMarquee 300s linear infinite;
  --animate-slowMarquee: marquee 300s linear infinite;
  --animate-bouncingMarquee: bouncingMarquee 6s ease-in-out infinite;
  @keyframes marquee {
    0% {
      transform: translateX(0%);
    }
    100% {
      transform: translateX(-100%);
    }
  }
  @keyframes rightMarquee {
    0% {
      transform: translateX(0%);
    }
    100% {
      transform: translateX(100%);
    }
  }
  @keyframes bouncingMarquee {
    0% {
      transform: translateX(0%);
    }
    33% {
      transform: translateX(100%);
    }
    66% {
      transform: translateX(-100%);
    }
    100% {
      transform: translateX(0%);
    }
  }
}
:root {
  font-family: Inter, sans-serif;
  font-feature-settings:
  "liga" 1,
  "calt" 1, /* Contextual Alternates */
  "dlig" 1, /* Discretionary Ligatures */
  "ss07" 1, /* fSquare punctuation */
  "ss08" 1, /* Square quotes */
  "zero" 1, /* Slashed zero */
  "tnum" 1, /* Tabular numbers */
    "cv03" 1, /* Open six */
    "cv04" 1, /* Open nine */
    "cv01" 1, /* Alternate one */
    "cv09", /* Flat-top three */
    "cv02" 1; /* Open 4 */
}
@supports (font-variation-settings: normal) {
  :root {
    font-family: InterVariable, sans-serif;
  }
}
.pause-on-hover:hover {
  animation-play-state: paused;
}
.keen-slider__slide {
  overflow: visible;
}

